submit bug on IE fixed?

--- a/css/styles.css
+++ b/css/styles.css
@@ -497,6 +497,10 @@ fieldset {
     margin-bottom: 1rem;
 }
 
+fieldset:last-child {
+    border: none;
+}
+
 #tot,
 legend {
 	font-weight: bold;
@@ -544,16 +548,17 @@ form input.long {
 	width: 10rem;
 }
 
-button.form {
+.form {
 	background-color: #fff;
 	border: 1px solid #000;
 	padding: .4rem 3rem;
-	text-align: center;
+	/*text-align: center;*/
 	margin: 2rem auto;
 	transition: all .2s ease-in-out;
+    float: right;
 }
 
-button.form:hover {
+.form:hover {
 	cursor: pointer;
 	background-color: #ccc;
 }
